--- a/src/app/shared/components/sidenav/sidenav.html
+++ b/src/app/shared/components/sidenav/sidenav.html
@@ -140,7 +140,7 @@
                 <div class="nav-icon bg-red-100">
                     <i class="fa-solid fa-circle-play text-red-600"></i>
                 </div>
-                <span *ngIf="(sidenavService.isOpen$ | async) || isMobile" class="nav-text">الفيديوهات</span>
+                <span *ngIf="(sidenavService.isOpen$ | async) || isMobile" class="nav-text"> المرفقات</span>
             </a>
 
             <!-- المدفوعات -->
