--- a/src/app/user/component/profile/profile.component.html
+++ b/src/app/user/component/profile/profile.component.html
@@ -275,7 +275,7 @@
                                 </div>
                                 <span class="text-sm font-semibold text-blue-600">الاسم الكامل</span>
                             </div>
-                            <p class="text-xl font-bold text-gray-900">{{ user.firstName }} {{ user.lastName }}</p>
+                            <p class="text-xl font-bold text-gray-900">{{ user.firstName }} {{ user.lastName }} {{ user.thirdtName }} {{ user.fourthName }}</p>
                         </div>
 
                         <!-- Email -->
