--- a/src/app/user/component/users/users.component.html
+++ b/src/app/user/component/users/users.component.html
@@ -10,11 +10,11 @@
                 <h1 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-2">إدارة المستخدمين</h1>
                 <p class="text-gray-600">إدارة جميع المستخدمين في النظام</p>
             </div>
-            <button (click)="openDialog()"
+            <!-- <button (click)="openDialog()"
                 class="w-full sm:w-auto px-6 py-3 add-btn ">
                 <i class="fas fa-user-plus"></i>
                 <span>إضافة مستخدم جديد</span>
-            </button>
+            </button> -->
         </div>
     </div>
 
