--- a/src/app/auth/components/login/login.html
+++ b/src/app/auth/components/login/login.html
@@ -124,7 +124,7 @@
             </div>
 
             <!-- Social Login -->
-            <div class="grid grid-cols-2 gap-4 animate-slide-up delay-5">
+            <!-- <div class="grid grid-cols-2 gap-4 animate-slide-up delay-5">
                 <button type="button" class="social-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
                         <path fill="#EA4335" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
@@ -140,7 +140,7 @@
                     </svg>
                     Facebook
                 </button>
-            </div>
+            </div> -->
 
             <!-- Signup Link -->
             <p class="text-center text-white/70 mt-6 animate-slide-up delay-6">
